--- a/lab2.2.html
+++ b/lab2.2.html
@@ -17,7 +17,7 @@
                 <label>ชื่อ-สกุล:</label><br>
                 <input type="text" name="Name" placeholder="กรอกชื่อ-สุกล" required> *<br>
                 <label>Email:</label><br>
-                <input type="text" name="Email" pattern="\w+@\w+\.com" title="Email ต้องมี @ และ .com -ตัวอย่าง. Qler@gmail.com" required> *<br>
+                <input type="text" name="Email" pattern="\w+@\w+\.com" title="โปรดกรอก Email ให้ถูกต้อง" required> *<br>
                 <label>โทรศัพท์:</label><br>
                 <input type="text" name="Tel" pattern="\+\d+" title="เบอร์โทรจะต้องเป็นตัวเลขเท่านั้น" value="+66" required> *<br>
                 <label>ที่อยู่:</label><br>
@@ -31,8 +31,8 @@
             <fieldset>
                 <legend>ข้อมูลเข้าสู่ระบบ</legend>         
                 <label>Username:</label><br>    
-                <input type="text" name="Username" pattern="\w{8,}" title="ต้องมีตัวอักษร หรือ_ตั้งแต่ 8 ตัวขึ้นไป"><br>
-                <i>ประกอบด้วยตัวเลข ตัวอักษร หรือ_ตั้งแต่ 8 ตัวขึ้นไป</i><br><br>
+                <input type="text" name="Username" pattern="\w{8,}" title="ต้องมีตัวอักษร หรือ ตั้งแต่ 8 ตัวขึ้นไป"><br>
+                <i>ประกอบด้วยตัวเลข ตัวอักษร หรือ ตั้งแต่ 8 ตัวขึ้นไป</i><br><br>
                 <label>Password:</label><br>   
                 <input type="password" name="Password" pattern="\w{8,}" title="ต้องมีอักขระอะไรก็ได้ 8 ตัวขึ้นไป"><br> 
                 <i>ประกอบด้วยอักขระอะไรก็ได้ 8 ตัวขึ้นไป</i>
